# neordm

./: .gitignore  README.md  README.zh-CN.md  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml  tauri-build.yml
docs/: theme-colors.md
scripts/: check-ai-chat-stop-wiring.mjs  check-ai-lua-tool.mjs  check-auto-key-list-api-wiring.mjs  check-auto-key-list-fast-path-guards.mjs  check-auto-key-list-store-behavior.mjs  check-auto-refresh-window-visibility.mjs  check-connection-modal-layout.mjs  check-initial-key-page-size.mjs  check-key-scan-batching.mjs  check-lightweight-key-list-strategy.mjs  check-load-more-stop-style.mjs  check-overview-api-wiring.mjs  check-overview-panel-endpoint-overflow.mjs  check-overview-panel-ui.mjs  check-overview-panel-wiring.mjs  check-overview-workspace-behavior.mjs  check-summary-first-key-detail-loading.mjs  check-visible-key-type-loading.mjs  check-workspace-topbar-connection-overflow.mjs
scripts/macos/: fix-neordm.command  repack-dmg-with-fix.sh
src/: App.tsx  i18n.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  models.rs  redis_support.rs  statusbar.rs
src-tauri/src/commands/: core.rs  http.rs  keys.rs  mod.rs  overview.rs  pubsub.rs  slowlog.rs  stream.rs  values.rs
src-tauri/src/statusbar/: actions.rs  menu.rs
src/components/: AIAgent.tsx  AIAgentPanel.tsx  CommandPalette.tsx  ConnectionModal.tsx  ConnectionModalHost.tsx  CreateKeyModal.tsx  DataTable.tsx  JsonCodeEditor.tsx  (+20 more)
(+60 files in other folders)
