[package]
name = "neordm"
version = "0.1.0"
description = "AI-first Redis desktop client for browsing data, managing keys, and executing Redis workflows."
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "neordm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
redis = { version = "0.29", features = ["tokio-comp", "tokio-native-tls-comp", "cluster-async"] }
shell-words = "1.1"
url = "2"
tauri-plugin-store = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
async-ssh2-lite = { version = "0.4.2", features = ["tokio"] }
native-tls = "0.2"
tokio-native-tls = "0.3"
tokio = { version = "1", features = ["io-util", "macros", "sync"] }
futures-util = "0.3"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"
